{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 294,
  "lineage": "ec58c5b0-a212-c9dc-fee3-03141a2db670",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7735b4a50797ca1",
            "arn": "arn:aws:ec2:eu-west-3:756942038699:elastic-ip/eipalloc-0d7735b4a50797ca1",
            "association_id": "eipassoc-07215836fd92d374e",
            "domain": "vpc",
            "id": "eipalloc-0d7735b4a50797ca1",
            "instance": "i-0e66f3b6675a80d1f",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-09e0e476272f1a52e",
            "private_dns": "ip-10-0-1-90.eu-west-3.compute.internal",
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-13-36-187-182.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.187.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vibe-tickets-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-eip",
              "Owner": "simon",
              "Project": "vibe-tickets"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae3eb6d5d1b2aa5",
            "arn": "arn:aws:ec2:eu-west-3:756942038699:instance/i-04da217c00bb65b43",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vibe-tickets-ec2-profile",
            "id": "i-04da217c00bb65b43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vibe-tickets-key-20250605-110126",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a89596572eddc79",
            "private_dns": "ip-10-0-1-133.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-35-180-193-99.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.193.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:756942038699:key/d758b388-d7e1-4d1f-a560-22c9b0b34ebf",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Owner": "simon",
                  "Project": "vibe-tickets"
                },
                "throughput": 125,
                "volume_id": "vol-0474f1a870966c4b1",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0532e938898bbbe4d",
            "tags": {
              "Name": "vibe-tickets-server"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-server",
              "Owner": "simon",
              "Project": "vibe-tickets"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-049e763caa228175c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_ecr_repository.main",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:internet-gateway/igw-02462cad26db2f982",
            "id": "igw-02462cad26db2f982",
            "owner_id": "756942038699",
            "tags": {
              "Name": "vibe-tickets-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-igw",
              "Owner": "simon",
              "Project": "vibe-tickets"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:route-table/rtb-087ad2ad622ded360",
            "id": "rtb-087ad2ad622ded360",
            "owner_id": "756942038699",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02462cad26db2f982",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vibe-tickets-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-public-rt",
              "Owner": "simon",
              "Project": "vibe-tickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc0dc37d743dc5f",
            "route_table_id": "rtb-087ad2ad622ded360",
            "subnet_id": "subnet-0532e938898bbbe4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc047e82afe6ada5",
            "route_table_id": "rtb-087ad2ad622ded360",
            "subnet_id": "subnet-0c45706b14b72c9c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddf040057cc63f61",
            "route_table_id": "rtb-087ad2ad622ded360",
            "subnet_id": "subnet-05eea967816ccb3cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:security-group/sg-049e763caa228175c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049e763caa228175c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access for Spring Boot app",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "109.209.31.42/32"
                ],
                "description": "SSH access from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vibe-tickets-ec2-20250526103611772300000001",
            "name_prefix": "vibe-tickets-ec2-",
            "owner_id": "756942038699",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vibe-tickets-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-ec2-sg",
              "Owner": "simon",
              "Project": "vibe-tickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:security-group/sg-08089293900d81daf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08089293900d81daf",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.209.31.42/32"
                ],
                "description": "PostgreSQL access from my IP for testing",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL access from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049e763caa228175c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vibe-tickets-rds-20250526103614188500000003",
            "name_prefix": "vibe-tickets-rds-",
            "owner_id": "756942038699",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vibe-tickets-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-rds-sg",
              "Owner": "simon",
              "Project": "vibe-tickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:subnet/subnet-0e7545473270533cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7545473270533cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756942038699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-tickets-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-private-subnet-1",
              "Owner": "simon",
              "Project": "vibe-tickets",
              "Type": "Private"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:subnet/subnet-0cc37cb80cd451c95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc37cb80cd451c95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756942038699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-tickets-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-private-subnet-2",
              "Owner": "simon",
              "Project": "vibe-tickets",
              "Type": "Private"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:subnet/subnet-0c3552ae8a3b66ae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3552ae8a3b66ae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756942038699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-tickets-private-subnet-3",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-private-subnet-3",
              "Owner": "simon",
              "Project": "vibe-tickets",
              "Type": "Private"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:subnet/subnet-0532e938898bbbe4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0532e938898bbbe4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756942038699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-tickets-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-public-subnet-1",
              "Owner": "simon",
              "Project": "vibe-tickets",
              "Type": "Public"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:subnet/subnet-0c45706b14b72c9c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c45706b14b72c9c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756942038699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-tickets-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-public-subnet-2",
              "Owner": "simon",
              "Project": "vibe-tickets",
              "Type": "Public"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:subnet/subnet-05eea967816ccb3cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eea967816ccb3cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756942038699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-tickets-public-subnet-3",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-public-subnet-3",
              "Owner": "simon",
              "Project": "vibe-tickets",
              "Type": "Public"
            },
            "vpc_id": "vpc-015bc9b78e755fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:756942038699:vpc/vpc-015bc9b78e755fab1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6ffba3cc4372f18",
            "default_route_table_id": "rtb-0fcd8a23b022f7e54",
            "default_security_group_id": "sg-0bcc20d4a8d38f53d",
            "dhcp_options_id": "dopt-0d5881e74f645b947",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015bc9b78e755fab1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fcd8a23b022f7e54",
            "owner_id": "756942038699",
            "tags": {
              "Name": "vibe-tickets-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vibe-tickets-vpc",
              "Owner": "simon",
              "Project": "vibe-tickets"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}